--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.3),rgb(0, 0, 0)),url(images/header-bg.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.3),rgb(0, 0, 0)),url(images/footer.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
