--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ p{
 /* footer  */
 
 .footer{
-    background-image: linear-gradient(rgba(4,9,30,0.3),rgb(0, 0, 0)),url(images/footer.jpg);
+    background-image: linear-gradient(rgba(0,0,0),rgb(4,9,30,0.3)),url(images/footer.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
